<resources>
    <string name="app_name">SQLiteCRUD</string>

    <string name="name">Name : </string>
    <string name="course">Course : </string>
    <string name="email">Email : </string>
    <string name="phone">Phone : </string>
    <string name="h_name">Enter Name</string>
    <string name="h_course">Enter Course</string>
    <string name="h_email">Enter Email</string>
    <string name="h_phone">Enter Phone No.</string>
    <string name="store">Store</string>
    <string name="add">Add New Teacher</string>
    <string name="mod">Modify</string>
    <string name="inst_text">To Edit,\nTap on the Items from the List</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="action_search">Action Search</string>
    <string name="google_maps_key">AIzaSyBxWeydTCAD08BSrAlXzDPQZD7Yyn_s2lw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>


    <string name="new_memory_title_hint">Add Title</string>
    <string name="new_memory_btn_cancel">Cancel</string>
    <string name="new_memory_btn_save">Save</string>
    <string name="new_memory_btn_edit">Update</string>
    <string name="new_memory_btn_delete">Delete</string>
    <string name="activity_main_empty_view_text">Create your first photo memory with the button below.</string>
    <string name="new_memory_btn_gallery">Add a photo from gallery</string>
    <string name="new_memory_btn_camera">Add a photo from camera</string>
</resources>