<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".activity.UpdateMemoryActivity">

    <ImageView
        android:id="@+id/update_memory_selected_image"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/update_memory_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_memory_title_hint"/>

    <Button
        android:onClick="openUpdateGallery"
        android:text="@string/new_memory_btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="openUpdateCamera"
        android:text="@string/new_memory_btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/update_memory_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="cancelUpdate"
            android:text="@string/new_memory_btn_cancel"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/btnUpdate_memory"
            android:onClick="saveUpdate"
            android:text="@string/new_memory_btn_edit"
            android:layout_height="wrap_content" />



    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:onClick="deleteUpdate"
        android:text="@string/new_memory_btn_delete"
        android:layout_height="wrap_content" />


</LinearLayout>